auth1.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: disable-mtls-namespace
  namespace: oc-uc1
spec:
  mtls:
    mode: DISABLE
