custom-router.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-router
  namespace: openshift-ingress
  labels:
    router: custom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-router
      router: custom
  template:
    metadata:
      labels:
        app: custom-router
        router: custom
    spec:
      serviceAccountName: router
      containers:
      - name: router
        image: quay.io/openshift/origin-haproxy-router:latest
        ports:
        - containerPort: 80
        - containerPort: 443
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /etc/pki/tls/private
          name: default-certificate
          readOnly: true
      volumes:
      - name: default-certificate
        secret:
          defaultMode: 420
          secretName: router-certs-default
