router-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-router
  namespace: openshift-ingress
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
  selector:
    app: custom-router
    router: custom
