destinationrule-uc1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ocsaplservice-uc1-destinationrule
  namespace: oc-uc1
spec:
  host: ocsaplservice-uc1.oc-uc1.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
