envoy-filter - Copy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: decision-filter
  namespace: oc-testenv
spec:
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
      # Exclude the decision service
      # Match only requests that are NOT to the decision service
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.ext_authz
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
          http_service:
            server_uri:
              uri: "http://ocproutingservice-oc-testenv.apps-crc.testing/routing/testEnv"
              cluster: "outbound|8080||ocproutingservice.route-testenv.svc.cluster.local"
              timeout: 5s
            authorization_request:
              allowed_headers:
                patterns:
                  - exact: ":method"
                  - exact: ":path"
                  - exact: ":authority"
                  - exact: "Host-TestEnv"
            authorization_response:
              allowed_upstream_headers:
                patterns:
                  - exact: "target-host"
